 # [#25381] Banner Manager: Tracks - JavaScript error 'document.id("jform_inline0") is null' (Peter Chovancak)
 # [#25354] Edit icon does not work on 3rd party extensions (Nikolai Plath)
 # [#25498] Login error when user is not activated (Rune Sjøen)
 # [#25237] Credentials not added to response when authentication fails
 # [#26277] Extra line breaks in weblink item description (Dennis Hermatski)

27-Jun-2011 Mark Dexter
 ^ [#26088] Add WAI-ARIA and HTML5 support the progressbar.js (Rouven Weßling) 
 ^ [#26099] Make loadmodule plugin more useful (Elin Waring)
 # [#25696] Updating from J1.6.2 to J1.6.3 removes all files!
 # Prepare for 1.7 Beta1 Release

27-Jun-2011 Christophe Demko
 # [#26261] Fix some issues from 26260 (Rouven Weßling)

26-Jun-2011 Christophe Demko
 # [#26223] JMail::setSender do not set Sender (Alessandro Pasotti)
 # [#26155] Search results for contacts (Nikolai Plath)
 # [#26260] Add a little eye candy to the bluestork cpanel (Rouven Weßling)

25-Jun-2011 Christophe Demko
 # [#23893] My Profile issues
 # [#26252] Cache library does not generate valid index.html file
 # [#26238] Improvement of assigning modules (Dennis Hermatski)
 # [#26043] Install second joomla with special prefix destruct first joomla tables at the same database
 # [#26254] Contact List Queries Trashed Items (Nikolai Plath)

24-Jun-2011 Christophe Demko
 - Revert commit 21640 (http://joomlacode.org/gf/project/joomla/tracker/?action=TrackerItemEdit&tracker_item_id=25041)

23-Jun-2011 Jean-Marie Simonet
 $ Correcting extraneous spaces in some ini files
 
23-Jun-2011 Christophe Demko
 # [#24662] Newly published articles showing pending when they are actually published (revived) (Elin Waring)
 # [#22158] Templates are still available for assignment after being unpublished
 # [#26040] Redirect of article enabled with 'register to read more' function results in 404 Category not found (Joel Walker)
 # [#23793] Core update potentially allows for installing an older update