@@ -37,6 +37,7 @@ $ -> Language fix or change
  # [#25498] Login error when user is not activated (Rune Sjøen)
  # [#25237] Credentials not added to response when authentication fails
  # [#26277] Extra line breaks in weblink item description (Dennis Hermatski)
+ # [#26262] Remove more images from bluestork (Rouven Weßling)
 
 27-Jun-2011 Mark Dexter
  ^ [#26088] Add WAI-ARIA and HTML5 support the progressbar.js (Rouven Weßling) 
